<resources>
    <string name="app_name">Utdanningsoversikten</string>
    <string name="utannings">Utdannings -</string>
    <string name="oversikten">oversikten</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Education_image">education image</string>
    <string name="education_description">education description</string>
    <string name="skoleikon">Skoleikon</string>
    <string name="bacheleor_i_sykepleie_heltid">Bachelor i Sykepleie, heltid</string>
    <string name="h_yskolen_i_stfold">Høyskolen i Østfold</string>
    <string name="bilde_utdanning">Bilde utdanning</string>
    <string name="her_kommer_beskrivelse_av_utdanningen">Her kommer beskrivelse av utdanningen</string>
    <string name="les_mer">Les mer</string>
    <string name="skolens_nettside">Skolens nettside</string>
    <string name="kravkode">Kravkode:</string>
    <string name="kravkode_input">Kravkode Input</string>
    <string name="poenggrense">Poenggrense:</string>
    <string name="poenggrenseinput">PoenggrenseInput</string>
    <string name="hjem">Hjem</string>
    <string name="kart">Kart</string>
    <string name="favoritter">Favoritter</string>
    <string name="konto">Konto</string>
    <string name="her_kommer_kart">Her kommer kart!</string>
    <string name="denne_skal_poppe_opp_kontoen_din">Denne skal poppe opp kontoen din!</string>
    <string name="her_kommer_favorittene_dine">Her kommer favorittene dine!</string>
    <string name="logg_inn_eller_fyll_liste">Logg inn eller fyll liste</string>
    <string name="logg_inn">Logg inn</string>
    <string name="logget_inn_som">Logget inn som</string>
    <string name="username">Username</string>
    <string name="logg_ut">Logg ut</string>
    <string name="x_lagrede_favoritter">Antall lagrede favoritter</string>
    <string name="heart">Heart</string>
    <string name="send_webbrowser">Send webBrowser</string>
    <string name="filtrer_s_ket">Filtrer søket</string>
    <string name="s_k_etter_ord_i_utdanningen">🔎 Søk etter ord i utdanningen</string>
    <string name="s_k">Søk</string>
    <string name="nullstill">Nullstill</string>
    <string name="beskrivelse">Beskrivelse</string>
    <string name="beskrivelsestekst">Suspendisse ac auctor risus, vel molestie justo. Pellentesque blandit orci eros, id tincidunt odio suscipit ut. Nullam dolor ligula, ultricies eget dolor ac, facilisis lacinia quam. Praesent tincidunt lectus ac posuere vulputate. Aenean finibus nulla ut dolor pellentesque, in venenatis justo interdum. Sed vulputate volutpat posuere. Vestibulum ultrices dui quam, nec tempor nulla blandit placerat.</string>
    <string name="sharebutton">share button</string>
    <string name="a_black_school_hat">A black school hat</string>
    <string name="button">Button</string>
    <string name="a_picture">A picture</string>
    <string name="notLoggedIn">Logg inn eller registrer deg.\nMed konto kan du lagre utdanninger.</string>
</resources>
