<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_menu"
        android:enabled="true"
        android:icon="@drawable/ic_home_plight_24dp"
        android:title="@string/hjem" />
    <item
        android:id="@+id/map_menu"
        android:enabled="true"
        android:icon="@drawable/ic_map_plight_24dp"
        android:title="@string/kart" />
    <item
        android:id="@+id/favourite_menu"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_plight_24dp"
        android:title="@string/favoritter" />
    <item
        android:id="@+id/account_menu"
        android:enabled="true"
        android:icon="@drawable/ic_account_box_plight_24dp"
        android:title="@string/konto" />
</menu>