<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    tool:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/schoolIcon"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/skoleikon"
            tool:layout_constraintStart_toStartOf="parent"
            tool:layout_constraintTop_toTopOf="parent"
            tool:srcCompat="@android:drawable/star_big_off" />

        <TextView
            android:id="@+id/educationTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:text="@string/bacheleor_i_sykepleie_heltid"
            android:textSize="18sp"
            android:textStyle="bold"
            tool:layout_constraintBottom_toTopOf="@+id/schoolName"
            tool:layout_constraintEnd_toEndOf="parent"
            tool:layout_constraintHorizontal_bias="0.0"
            tool:layout_constraintStart_toEndOf="@+id/schoolIcon"
            tool:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/schoolName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:text="@string/h_yskolen_i_stfold"
            android:textSize="18sp"
            tool:layout_constraintEnd_toEndOf="parent"
            tool:layout_constraintHorizontal_bias="0.0"
            tool:layout_constraintStart_toEndOf="@+id/schoolIcon"
            tool:layout_constraintTop_toBottomOf="@+id/educationTitle" />

        <ImageView
            android:id="@+id/educationImage"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/bilde_utdanning"
            tool:layout_constraintEnd_toEndOf="parent"
            tool:layout_constraintStart_toStartOf="parent"
            tool:layout_constraintTop_toBottomOf="@+id/schoolName"
            tool:srcCompat="@android:color/background_dark" />

        <TextView
            android:id="@+id/educationShortDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/her_kommer_beskrivelse_av_utdanningen"
            tool:layout_constraintEnd_toEndOf="parent"
            tool:layout_constraintHorizontal_bias="0.0"
            tool:layout_constraintStart_toStartOf="parent"
            tool:layout_constraintTop_toBottomOf="@+id/educationImage" />

        <TextView
            android:id="@+id/readModeTextLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="24dp"
            android:text="@string/les_mer"
            android:textSize="14sp"
            android:textStyle="bold"
            tool:layout_constraintBottom_toBottomOf="parent"
            tool:layout_constraintEnd_toStartOf="@+id/favHeart"
            tool:layout_constraintHorizontal_bias="0.0"
            tool:layout_constraintStart_toStartOf="parent"
            tool:layout_constraintTop_toBottomOf="@+id/educationShortDescription"
            tool:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/favHeart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/heart"
            tool:layout_constraintBottom_toBottomOf="parent"
            tool:layout_constraintEnd_toEndOf="parent"
            tool:srcCompat="@drawable/ic_fav_heart_fill" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>